# R2Log

./: R2Log.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: entrypoint_release.yml
tests/: test_exelog.py
